# DRE

./: .gitignore  CLAUDE.md  CONNECT.md  DRE Project Context.md  LICENSE  README.md  pyproject.toml
.claude/: settings.local.json
references/: analysis-summary.md
skills/dre-render/: SKILL.md
src/dre/: SKILL.md  __init__.py  __main__.py  cli.py  config.py
src/dre/ast/: nodes.py
src/dre/mcp_server/: server.py  tools.py
src/dre/parser/: markdown_parser.py
src/dre/postprocess/: officecli.py
src/dre/renderer/: code_block.py  docx_renderer.py  image.py  list.py  paragraph.py  sections.py  table.py  toc.py
src/dre/style/: defaults.py  template.py
src/dre/templates/: academic.yaml  bid.yaml  compact.yaml  formal.yaml  mac_standard.yaml  modern.yaml  standard.yaml  tech_design.yaml
tests/: test_core.py
tests/fixtures/: full_document.md  minimal.md  no_title.md  simple.md
