[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dre-docx"
version = "0.1.0"
description = "Document Rendering Engine — Markdown → Professional DOCX for AI Agents"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "python-docx>=1.0",
    "markdown-it-py>=3.0",
    "pyyaml>=6.0",
    "lxml>=5.0",
    "fastmcp>=3.0",
]
license = { text = "MIT" }
keywords = ["docx", "markdown", "rendering", "mcp", "ai-agent"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]

[project.scripts]
dre = "dre.cli:main"
dre-mcp = "dre.mcp_server.server:main"
dre-setup = "dre.cli:cmd_setup_main"

[tool.setuptools]
package-dir = { "" = "src" }
packages = ["dre", "dre.ast", "dre.parser", "dre.style", "dre.renderer", "dre.mcp_server", "dre.postprocess"]

[tool.setuptools.package-data]
dre = ["templates/*.yaml", "SKILL.md"]
